updated structure